<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_black_24"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:layout_marginLeft="25dp"
                android:text="@string/tentang_aplikasi"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:layout_marginHorizontal="10dp"
        android:text="@string/tentang_aplikasi_desc"
        android:fontFamily="serif"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/txt_desc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc"
        android:text="@string/tentang_aplikasi_desc2"
        android:textSize="18sp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/txt_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/txt_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_author"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_code"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_ig"
            android:background="@android:color/transparent"
            android:elevation="6dp"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_code"
            app:layout_constraintLeft_toRightOf="@+id/btn_instagram"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_github"
            android:background="@android:color/transparent"
            android:elevation="6dp"
            />


    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>